--- a/voice_recognation_demo_sample/pubspec.yaml
+++ b/voice_recognation_demo_sample/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   get: ^4.6.1
   vexana: ^2.5.0
   speech_to_text: ^5.4.2
+  sizer: ^2.0.15
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
